[FIX] web: fix product, rating, channel etc. kanban view
Due to commit https://github.com/odoo/odoo/commit/7ecae3357117b1fd9889540556d5eba14ef8f237
which is introduces Next Activity icon on kanban cards at left bottom
of the card in contacts

however, this change effects other kanban cards making image and
details separated, such effected kanban views are ratings in project,
products and channels in live chat so fix the layout issue for all the
above kanban cards and it will not effect the contact kanban view.

taskID-2183676
Closes: #44349

--- a/addons/web/static/src/scss/kanban_view.scss
+++ b/addons/web/static/src/scss/kanban_view.scss
@@ -337,7 +337,7 @@
         }
 
         .oe_kanban_details {
-            display: flex;
+            display: inherit;
             flex-flow: column;
             width: 100%;
 
